# coinet-platform

./: .gitignore  .gitignore 2  .pnpmfile.cjs  ACCESS_BACKUPS 2.md  ADD_API_KEYS_NOW.md  AI_SYSTEM_MALFUNCTION_ANALYSIS.md  ALERT_NOTIFICATION_SUCCESS 3.md  ALL_THREE_SERVICES 2.md  BACKUP_STRATEGY 2.md  BIRDEYE_API_KEY_SETUP.md  BUILD_ENGINE.md  CI_TEST.md  CI_TESTING_STATUS.md  CLAUDE.md  CLEANUP_EXECUTION_COMPLETE.md  CLEANUP_EXECUTION_PLAN.md  CLEANUP_SUMMARY 2.md  CLEANUP_SUMMARY.md  CLEANUP_VERIFICATION_REPORT.md  CLEAN_START.sh  CLERK_SETUP_GUIDE.md  CODESPACE_DEPLOYMENT_SUCCESS 2.md  CODESPACE_FIX 3.md  CODESPACE_SETUP.txt  CODESPACE_TEST_SWAGGER 2.md  CODE_REVIEW_FINAL_VERIFICATION 2.md  COINET_AI_GAP_ANALYSIS 3.md  COINET_AI_IMPLEMENTATION_ROADMAP 4.md  COINET_COMPLETE_ARCHITECTURE 3.md  COINET_V1_LAUNCH_READINESS.md  COINET_V1_NEXT_STEPS 3.md  COMMIT_MISSING_FILES 2.md  CONTRIBUTING 5.md  CORRECT_AUTH_ARCHITECTURE.md  CREATE_MARKET_PRICES_SERVICE.md  CREATE_MVP_FILES 3.sh  Coinet Platform Development Plan 2.html  DATABASE_SETUP_DIVINE 2.md  DEEP_ANALYSIS_PLAN.md  DEPLOYMENT_FIX_GUIDE 2.md  (+204 more)
.devcontainer/: README.md
.git 3/: index 2
.github/: README 3.md  (+1 more)
ai-services/ml-service/: .dockerignore  Dockerfile 2  Dockerfile.psychology  README.md  pyproject.toml  pytest.ini  requirements-core.txt  requirements.txt  test_workflow 2.py
ai-services/ml-service/scripts/: divine_causal_demo.py  test_causal_inference 2.py
ai-services/ml-service/src/coinet_ai_ml/: __init__ 2.py  config 2.py  main 2.py
ai-services/ml-service/src/coinet_ai_ml/continual_learning/: README 2.md  __init__.py  catastrophic_forgetting.py  causal_inference.py  consciousness_simulation.py  core.py  cosmic_scale_learning.py  data_ingestion.py  divine_ai_integration 2.py  divine_creativity.py  divine_integration.py  divine_optimization_algorithms 2.py  eternal_learning 2.py  evaluation.py  federated_learning 2.py  god_like_reasoning.py  knowledge_graph_integration.py  logging.py  meta_learning 2.py  meta_universe_consciousness.py  model_versioning.py  monitoring.py  multi_universe_learning.py  neural_architecture_search.py  neuro_symbolic_integration.py  online_learning.py  quantum_consciousness_integration.py  quantum_optimization.py  service 2.py  transcendent_learning.py  universal_intelligence 2.py
ai-services/ml-service/src/coinet_ai_ml/fusion/: FUSION_PIPELINE_README.md  README_TESTING.md  __init__.py  encoders.py  fusion_mechanisms.py  multimodal_fusion 2.py  multimodal_fusion.py  temporal_alignment.py  test_fusion_pipeline.py  test_requirements.txt  test_runner 2.py  test_runner.py  test_utils.py  usage_examples 2.py  web_interface 2.html
ai-services/ml-service/src/coinet_ai_ml/knowledge_graph/: __init__ 2.py  api.py  core 2.py  demo.py  extraction.py  integration.py  reasoning.py  storage.py
ai-services/ml-service/src/coinet_ai_ml/nlp/: __init__.py  blockchain_knowledge_graphs 2.py  context.py  core.py  cross_modal_fusion.py  embeddings 2.py  meta_learning_framework.py  ner.py  neuromorphic_layer.py  ontologies.py  parsing.py  quantum_nlp 2.py  temporal_engine 2.py
ai-services/ml-service/src/coinet_ai_ml/oracle/: __init__.py
ai-services/ml-service/src/coinet_ai_ml/oracle/core/: __init__.py  market_consciousness.py  oracle_engine.py  prediction_synthesizer.py  whale_tracker.py
ai-services/ml-service/src/coinet_ai_ml/psychology/: __init__ 2.py  api 2.py
ai-services/ml-service/src/coinet_ai_ml/routes/: causal_inference.py  multimodal_fusion 2.py
ai-services/ml-service/tests/: __init__.py  conftest.py  pytest.ini  test_causal_inference.py  test_health.py
(+7145 files in other folders)
