[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coinet-ai-ml-service"
version = "1.0.0"
description = "AI/ML service for Coinet AI platform"
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = {text = "MIT"}
authors = [
    {name = "Coinet AI Team", email = "team@coinet.ai"},
]
keywords = ["ai", "ml", "cryptocurrency", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Web Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # AI/ML APIs
    "openai>=1.3.0",
    "anthropic>=0.8.0",
    "google-generativeai>=0.3.0",
    
    # Vector Databases
    "pinecone-client>=2.2.4",
    "weaviate-client>=3.25.0",
    
    # Speech & Audio
    "deepgram-sdk>=3.2.0",
    
    # ML Libraries
    "scikit-learn>=1.3.2",
    "pandas>=2.1.4",
    "numpy>=1.25.2",
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.2",
    
    # Database Clients
    "asyncpg>=0.29.0",
    "redis>=5.0.1",
    "motor>=3.3.2",  # MongoDB async driver
    "clickhouse-connect>=0.6.20",
    
    # Message Queue
    "aiokafka>=0.9.0",
    "celery>=5.3.4",
    
    # Utilities
    "httpx>=0.25.2",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "rich>=13.7.0",
    
    # Data Processing
    "aiofiles>=23.2.1",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.3",
    "feedparser>=6.0.10",
    
    # Monitoring
    "prometheus-client>=0.19.0",
    "sentry-sdk[fastapi]>=1.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.6.0",
    "httpx>=0.25.2",  # for testing
]

production = [
    "gunicorn>=21.2.0",
    "supervisor>=4.2.5",
]

[project.urls]
Homepage = "https://github.com/your-org/coinet-ai"
Repository = "https://github.com/your-org/coinet-ai.git"
Issues = "https://github.com/your-org/coinet-ai/issues"

[project.scripts]
coinet-ml = "coinet_ai_ml.main:main"

[tool.hatch.version]
path = "src/coinet_ai_ml/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/coinet_ai_ml"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["coinet_ai_ml"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
] 